# sentry

./: .gitignore  bun.lockb  main.py  pyproject.toml  tags.json  test.py
bun-ts/: bun.lockb
bun-ts/src/: util.ts
bun-ts/src/cmds/misc/: say.ts
cmds/: misc.py  mod.py  owner.py
sentry/: __init__.py  main.py
sentry-go/: go.mod  main.go
src/: index.ts
src/cmds/misc/: sentry.ts  vid.ts
src/cmds/owner/: role.ts
test/world_game/: arizona.geojson  main.py
