[tool.poetry]
name = "sentry"
version = "0.1.0"
description = ""
authors = ["fourarmy <57693631+m1ten@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
sentry = "sentry:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
